Add support for Java 24+